Make launch list corners rounded on <Lollipop

--- a/project/src/main/res/drawable/launch_hotels_gradient_bottom.xml
+++ b/project/src/main/res/drawable/launch_hotels_gradient_bottom.xml
@@ -4,4 +4,5 @@
         android:startColor="#99000000"
         android:endColor="#00000000"
         android:angle="90"/>
+    <corners android:radius="4dp" />
 </shape>
