--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -38,6 +38,7 @@
     <dimen name="launch_lob_container_height">140dp</dimen>
     <dimen name="launch_lob_squashed_height">80dp</dimen>
     <dimen name="launch_lob_margin">8dp</dimen>
+    <dimen name="launch_list_corner_radius">3dp</dimen>
 
     <!-- Itinerary dimens -->
     <dimen name="itin_card_collapsed_height">138.5dp</dimen>
