Add animation and sytle to the checkout slider

--- a/project/src/main/res/layout/car_checkout_summary_widget.xml
+++ b/project/src/main/res/layout/car_checkout_summary_widget.xml
@@ -82,6 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="12dp"
                 android:drawableLeft="@drawable/check"
+                android:drawablePadding="8dp"
                 android:gravity="center_vertical"
                 android:text="Free Cancellation"
                 android:textColor="@color/cars_checkout_text_color"
@@ -92,6 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/check"
+                android:drawablePadding="8dp"
                 android:gravity="center_vertical"
                 android:text="Free Mileage"
                 android:textColor="@color/cars_checkout_text_color"
