--- a/project/src/main/res/layout/widget_checkout_base.xml
+++ b/project/src/main/res/layout/widget_checkout_base.xml
@@ -106,33 +106,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="#CCFFFFFF"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingBottom="2dp"
-        android:paddingTop="12dp">
+        android:orientation="vertical">
 
-        <com.expedia.bookings.widget.SlideToWidgetJB
-            android:id="@+id/slide_to_purchase_widget"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:background="#00000000"
-            app:destComplete="@drawable/slide_complete"
-            app:dragImage="@drawable/slide_drag"
-            app:sliderBackgroundColor="?attr/primary_color"
-            app:sliderImage="@drawable/slide"
-            app:sliderText="?attr/checkout_slider_text" />
+        <View
+            android:id="@+id/slider_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:background="@drawable/drop_shadow" />
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/purchase_total_text_view"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:textColor="?attr/primary_color"
-            android:textSize="@dimen/slide_to_purchase_price_text_size" />
+            android:background="#CCFFFFFF"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingBottom="4dp"
+            android:paddingTop="12dp">
+
+            <com.expedia.bookings.widget.SlideToWidgetLL
+                android:id="@+id/slide_to_purchase_widget"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/car_slide_to_purchase_padding"
+                android:layout_marginRight="@dimen/car_slide_to_purchase_padding"
+                android:background="#00000000" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/purchase_total_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:textColor="@color/cars_primary_color"
+                android:textSize="@dimen/car_slide_to_purchase_price_text_size" />
+        </LinearLayout>
     </LinearLayout>
+
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/checkout_toolbar"
