--- a/project/src/main/res/layout/car_checkout_summary_widget.xml
+++ b/project/src/main/res/layout/car_checkout_summary_widget.xml
@@ -4,137 +4,170 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="16dp"
-    android:layout_marginLeft="14dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginTop="14dp"
     tools:showIn="@layout/widget_car_checkout">
 
-    <LinearLayout
-        android:id="@+id/info_block"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/top_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:orientation="vertical">
-
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/car_vendor_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:paddingBottom="8dp"
-            android:textColor="#3C3C3C"
-            android:textSize="17sp"
-            app:textStyle="medium" />
-
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/category_title_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/cars_checkout_text_color"
-            android:textSize="12sp"
-            android:textStyle="bold" />
-
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/car_model_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:paddingBottom="8dp"
-            android:textColor="@color/cars_checkout_text_color"
-            android:textSize="12sp" />
-
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/location_description_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:text="@string/desk_and_vehicle_terminal"
-            android:textColor="@color/cars_checkout_text_color"
-            android:textSize="12sp"
-            android:textStyle="bold" />
-
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/airport_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:textColor="@color/cars_checkout_text_color"
-            android:textSize="13sp" />
-
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/date_time_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:textColor="@color/cars_checkout_text_color"
-            android:textSize="12sp" />
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="14dp">
 
         <LinearLayout
+            android:id="@+id/info_block"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="8dp">
+            android:layout_alignParentLeft="true"
+            android:orientation="vertical">
 
             <com.expedia.bookings.widget.TextView
-                android:id="@+id/free_cancellation_text"
+                android:id="@+id/car_vendor_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="12dp"
-                android:drawableLeft="@drawable/check"
-                android:drawablePadding="8dp"
-                android:gravity="center_vertical"
-                android:text="@string/free_cancellation"
+                android:layout_gravity="top"
+                android:paddingBottom="8dp"
+                android:textColor="#3C3C3C"
+                android:textSize="17sp"
+                app:textStyle="medium" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/category_title_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/cars_checkout_text_color"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/car_model_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:paddingBottom="8dp"
                 android:textColor="@color/cars_checkout_text_color"
                 android:textSize="12sp" />
 
             <com.expedia.bookings.widget.TextView
-                android:id="@+id/unlimited_mileage_text"
+                android:id="@+id/location_description_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/check"
-                android:drawablePadding="8dp"
-                android:gravity="center_vertical"
-                android:text="@string/unlimited_mileage"
+                android:layout_gravity="top"
+                android:text="@string/desk_and_vehicle_terminal"
+                android:textColor="@color/cars_checkout_text_color"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/airport_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:textColor="@color/cars_checkout_text_color"
+                android:textSize="13sp" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/date_time_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
                 android:textColor="@color/cars_checkout_text_color"
                 android:textSize="12sp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="8dp">
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/free_cancellation_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="12dp"
+                    android:drawableLeft="@drawable/check"
+                    android:drawablePadding="8dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/free_cancellation"
+                    android:textColor="@color/cars_checkout_text_color"
+                    android:textSize="12sp" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/unlimited_mileage_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/check"
+                    android:drawablePadding="8dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/unlimited_mileage"
+                    android:textColor="@color/cars_checkout_text_color"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/grand_total_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignRight="@+id/pickup_text"
+            android:text="Total with Tax"
+            android:textColor="@color/cars_checkout_text_color"
+            android:textSize="11sp" />
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/price_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/grand_total_text"
+            android:drawablePadding="6dp"
+            android:drawableRight="@drawable/info"
+            android:gravity="right"
+            android:maxLines="1"
+            android:textColor="@color/cars_checkout_text_color"
+            android:textSize="16sp"
+            app:textStyle="medium" />
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/pickup_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/price_text"
+            android:text="Due at pick-up"
+            android:textColor="@color/cars_checkout_text_color"
+            android:textSize="11sp" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/top_container"
+        android:background="#F9F9F9"
+        android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#D5D5D5" />
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/price_change_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingBottom="10dp"
+            android:paddingTop="8dp"
+            android:textColor="@color/cars_checkout_text_color"
+            android:textSize="14sp"
+            android:visibility="invisible"
+            app:textStyle="light" />
+
     </LinearLayout>
-
-    <com.expedia.bookings.widget.TextView
-        android:id="@+id/grand_total_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignRight="@+id/pickup_text"
-        android:text="Total with Tax"
-        android:textColor="@color/cars_checkout_text_color"
-        android:textSize="11sp" />
-
-    <com.expedia.bookings.widget.TextView
-        android:id="@+id/price_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/grand_total_text"
-        android:drawablePadding="6dp"
-        android:drawableRight="@drawable/info"
-        android:gravity="right"
-        android:maxLines="1"
-        android:textColor="@color/cars_checkout_text_color"
-        android:textSize="16sp"
-        app:textStyle="medium" />
-
-    <com.expedia.bookings.widget.TextView
-        android:id="@+id/pickup_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/price_text"
-        android:text="Due at pick-up"
-        android:textColor="@color/cars_checkout_text_color"
-        android:textSize="11sp" />
 
 </com.expedia.bookings.widget.CarCheckoutSummaryWidget>
