Confirmation screen for LX.
- Added allDayActicity param which is required for full day activities else
  the product lookup fails.
- Added missing storedCreditCardId to checkout request params.

--- a/project/src/main/res/layout/lx_checkout_presenter.xml
+++ b/project/src/main/res/layout/lx_checkout_presenter.xml
@@ -6,6 +6,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <com.expedia.bookings.widget.LXConfirmationWidget
+        android:id="@+id/confirmation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/lx_confirmation_background"/>
+
     <com.expedia.bookings.widget.CVVEntryWidget
         android:id="@+id/cvv"
         android:layout_width="match_parent"
