--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -268,5 +268,8 @@
     <color name="lx_date_disabled_background_color">#D3D3D3</color>
     <color name="lx_checkmark_color">#29a653</color>
     <color name="lx_actionbar_text_color">#FFFFFF</color>
+    <color name="lx_confirmation_gradient">#80000000</color>
+    <color name="lx_confirmation_background">#1A1D20</color>
+    <color name="lx_confirmation_action_text_color">#F3F3F3</color>
 
 </resources>
