--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -84,4 +84,14 @@
         <item name="cardCornerRadius">3dp</item>
         <item name="cardElevation">1dp</item>
     </style>
+
+    <style name="LXConfirmationButton" parent="V2.Theme.LX">   
+        <item name="android:gravity">left|center_vertical</item>
+        <item name="android:background">@drawable/itin_button</item>
+        <item name="android:height">60dp</item>
+        <item name="android:textColor">@android:color/white</item>     
+        <item name="android:textSize">18sp</item>     
+        <item name="android:paddingLeft">25dp</item>
+        <item name="android:drawablePadding">15dp</item>
+    </style>
 </resources>
