--- a/project/src/main/res/layout/section_car_offer_row.xml
+++ b/project/src/main/res/layout/section_car_offer_row.xml
@@ -1,27 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#eaeaea"
     android:foreground="?android:attr/selectableItemBackground">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="12dp"
-        android:layout_marginLeft="9dp"
-        android:layout_marginRight="9dp"
-        android:layout_marginTop="12dp"
-        android:background="#FFF"
-        card_view:cardCornerRadius="4dp">
-
-        <LinearLayout
+        <com.expedia.bookings.widget.LinearLayout
+            android:id="@+id/root"
+            android:background="@drawable/card_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:layout_marginLeft="9dp"
+            android:layout_marginRight="9dp"
+            android:layout_marginTop="12dp"
             android:animateLayoutChanges="true"
             android:orientation="vertical">
 
@@ -159,14 +153,12 @@
                 style="@style/CarOfferText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/white"
                 android:paddingBottom="6dp"
                 android:paddingLeft="14dp"
                 android:paddingRight="14dp"
                 android:paddingTop="6dp"
                 android:text="" />
 
-        </LinearLayout>
+        </com.expedia.bookings.widget.LinearLayout>
 
-    </android.support.v7.widget.CardView>
 </FrameLayout>
