--- a/project/src/main/res/layout/car_checkout_summary_widget.xml
+++ b/project/src/main/res/layout/car_checkout_summary_widget.xml
@@ -145,6 +145,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/price_change_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/top_container"
@@ -165,7 +166,6 @@
             android:paddingTop="8dp"
             android:textColor="@color/cars_checkout_text_color"
             android:textSize="14sp"
-            android:visibility="invisible"
             app:textStyle="light" />
 
     </LinearLayout>
