--- a/project/src/main/res/values/donottranslate.xml
+++ b/project/src/main/res/values/donottranslate.xml
@@ -98,6 +98,7 @@
     <string name="preference_etp_test">ExpediaAndroidAppETPDefaultNow</string>
     <string name="preference_book_above_fold">EBAndroidAppHISBookAboveFold</string>
     <string name="preference_hotel_free_cancellation">EBAndroidAppHISFreeCancellation</string>
+    <string name="preference_hotel_photo_treatment">ExpediaAndroidAppSwipablePhotos</string>
 
     <string name="preference_abacus_setting_server">Abacus Server</string>
     <string name="preference_abacus_setting_controlgroup">Control Group</string>
