--- a/project/src/main/res/layout/widget_car_confirmation.xml
+++ b/project/src/main/res/layout/widget_car_confirmation.xml
@@ -27,8 +27,9 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_height="match_parent"
+                android:id="@+id/text_container"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <com.expedia.bookings.widget.TextView
@@ -47,7 +48,7 @@
                     android:gravity="center"
                     android:text="@string/successful_checkout_pickup_label"
                     android:textColor="@color/itin_white_text"
-                    android:textSize="15sp" />
+                    android:textSize="13sp" />
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/pickup_location_text"
@@ -56,7 +57,7 @@
                     android:layout_marginBottom="12dp"
                     android:gravity="center"
                     android:textColor="@color/itin_white_text"
-                    android:textSize="15sp" />
+                    android:textSize="13sp" />
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/pickup_date_text"
@@ -65,7 +66,7 @@
                     android:layout_below="@+id/pickup_location_text"
                     android:gravity="center"
                     android:textColor="@color/itin_white_text"
-                    android:textSize="15sp" />
+                    android:textSize="13sp" />
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/dropoff_date_text"
@@ -74,7 +75,7 @@
                     android:layout_below="@+id/pickup_date_text"
                     android:gravity="center"
                     android:textColor="@color/itin_white_text"
-                    android:textSize="15sp" />
+                    android:textSize="13sp" />
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/itinerary_text_view"
@@ -83,7 +84,7 @@
                     android:layout_marginTop="8dp"
                     android:gravity="center"
                     android:textColor="@color/itin_white_text"
-                    android:textSize="15sp" />
+                    android:textSize="13sp" />
 
             </LinearLayout>
 
@@ -127,7 +128,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
+                    android:layout_height="15dp"
                     android:background="#2B3036" />
 
                 <com.expedia.bookings.widget.TextView
