--- a/project/src/main/res/layout/activity_flight_overview_and_checkout.xml
+++ b/project/src/main/res/layout/activity_flight_overview_and_checkout.xml
@@ -37,6 +37,18 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical" />
 
+                <TextView
+                    android:id="@+id/free_cancellation_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/checkmark_flight"
+                    android:drawablePadding="8dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    android:text="@string/ab_test_flights_free_cancellation"
+                    android:textColor="#FFE980"/>
+
                 <com.expedia.bookings.widget.TouchableFrameLayout
                     android:id="@+id/checkout_event_blocker"
                     android:layout_width="match_parent"
