--- a/project/src/main/res/xml/preferences_dev.xml
+++ b/project/src/main/res/xml/preferences_dev.xml
@@ -170,6 +170,14 @@
             android:summary="Select a test group"
             android:title="Hotel Info Site Photo Swipe Treatment" />
 
+        <ListPreference
+            android:entries="@array/abacus_default_choices"
+            android:entryValues="@array/abacus_default_choice_values"
+            android:defaultValue="@string/preference_abacus_default"
+            android:key="@string/preference_flight_free_cancellation"
+            android:summary="Select a test group"
+            android:title="Flight Free Cancellation Messaging" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Push" >
