--- a/project/src/main/res/layout/payment_widget.xml
+++ b/project/src/main/res/layout/payment_widget.xml
@@ -72,7 +72,7 @@
         <com.expedia.bookings.widget.LinearLayout
             android:id="@+id/stored_card_container"
             android:layout_width="match_parent"
-            android:layout_height="64dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <com.expedia.bookings.widget.RoundImageView
