--- a/project/src/main/res/layout/lx_checkout_presenter.xml
+++ b/project/src/main/res/layout/lx_checkout_presenter.xml
@@ -16,6 +16,7 @@
         android:id="@+id/cvv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#3A424C" />
+        android:background="#3A424C"
+        android:visibility="gone" />
 
 </merge>
