--- a/project/src/main/res/layout/car_dropdown_item.xml
+++ b/project/src/main/res/layout/car_dropdown_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
-    android:background="@android:color/white"
+    android:background="@drawable/spinner_ripple"
     android:paddingBottom="10dp">
 
     <ImageView
