--- a/project/src/main/res/layout/section_phone_launch_lob.xml
+++ b/project/src/main/res/layout/section_phone_launch_lob.xml
@@ -22,10 +22,11 @@
 
         <com.expedia.bookings.widget.LinearLayout
             android:id="@+id/lob_btn_container"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:divider="@drawable/space_lob_btns"
+
+
             android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:showDividers="middle">
@@ -35,6 +36,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginLeft="@dimen/launch_lob_margin"
+                android:layout_marginRight="@dimen/launch_lob_margin"
                 app:btn_bg="@drawable/bg_lob_hotels"
                 app:btn_icon="@drawable/lob_hotel"
                 app:btn_text="@string/nav_hotels" />
@@ -44,6 +47,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginRight="@dimen/launch_lob_margin"
                 app:btn_bg="@drawable/bg_lob_flights"
                 app:btn_icon="@drawable/lob_flight"
                 app:btn_text="@string/nav_flights" />
@@ -53,6 +57,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginRight="@dimen/launch_lob_margin"
                 app:btn_bg="@drawable/bg_lob_cars"
                 app:btn_icon="@drawable/lob_car"
                 app:btn_text="@string/nav_cars" />
