--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -224,6 +224,7 @@
     <color name="cars_primary_color">#7E4569</color>
     <color name="cars_secondary_color">#915B7C</color>
     <color name="cars_tooltip_color">#915B7C</color>
+    <color name="cars_tooltip_disabled_color">#9D9D9D</color>
     <color name="cars_slider_progress_color">#50FFFFFF</color>
     <color name="cars_dropdown_disabled_stroke">#C3C3C3</color>
     <color name="cars_dropdown_background_color">#ECECEC</color>
