--- a/project/src/main/res/values/ids.xml
+++ b/project/src/main/res/values/ids.xml
@@ -28,6 +28,7 @@
     <!-- QA Automation ids -->
     <item name="preference_suppress_hotel_booking_checkbox" type="id"/>
     <item name="preference_suppress_flight_booking_checkbox" type="id"/>
+    <item name="preference_suppress_car_booking_checkbox" type="id"/>
 
     <item name="plane_window_view" type="id"/>
 
