--- a/project/src/travelocity/res/values/themes.xml
+++ b/project/src/travelocity/res/values/themes.xml
@@ -84,7 +84,7 @@
         <item name="skin_candycaneProgressDrawable">@drawable/progressbar_candycane_horizontal_tvly</item>
         <item name="skin_tablet_pin_detail_image_size">@dimen/launch_pin_detail_size_travelocity</item>
         <item name="skin_tablet_ab_launch_text1_base">@string/merchant_name</item>
-        <item name="skin_tablet_ab_launch_text2_pin_detail">@string/merchant_name</item>
+        <item name="skin_tablet_ab_launch_text2_pin_detail">@string/Destination</item>
         <item name="skin_tablet_pin_detail_button_background">@drawable/btn_tablet_launch_screen_tvly</item>
         <item name="skin_tablet_pin_detail_button_text_color">@color/launch_pin_detail_button_text_travelocity</item>
         <item name="skin_menuAboutWebViewActivity">@menu/menu_webview</item>
