--- a/project/src/travelocity/res/layout/snippet_tablet_launch_destination.xml
+++ b/project/src/travelocity/res/layout/snippet_tablet_launch_destination.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.widget.DestinationCollection xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/destination_search_tile_width"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" />
