--- a/project/src/travelocity/res/values/dimens.xml
+++ b/project/src/travelocity/res/values/dimens.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Tvly tablet home screen dimens -->
-    <dimen name="tablet_destination_tile_size">232dp</dimen>
     <dimen name="tablet_launch_destination_list_text_width">280dp</dimen>
-    <dimen name="tablet_launch_destination_list_text_size">40dp</dimen>
+    <dimen name="tablet_launch_destination_list_text_size">36dp</dimen>
     <dimen name="destination_search_height">40dp</dimen>
-    <dimen name="destination_tile_extra_bottom_padding">150dp</dimen>
     <dimen name="tablet_launch_destination_title_margin_top">30dp</dimen>
+    <dimen name="destination_tile_extra_bottom_padding">0dp</dimen>
 
+    <!-- Tvly tablet home screen long strips in destination tile view -->
     <dimen name="destination_text_padding_vertical">5dp</dimen>
     <dimen name="destination_text_padding_horizontal">10dp</dimen>
     <dimen name="launch_pin_detail_size_travelocity">200dp</dimen>
-    <dimen name="destination_text_container_height">180dp</dimen>
+    <dimen name="destination_text_padding">5dp</dimen>
+
+    <!-- Tvly tablet home screen destination list view launch card -->
+    <dimen name="destination_list_horizontal_grid_margin_vertical">15dp</dimen>
+    <dimen name="destination_list_launch_card_spacing">5dp</dimen>
 </resources>
