UI polish for LX search widget.
Making LX search widget in line with the Cars search widget.

--- a/project/src/main/res/layout/lx_base_layout.xml
+++ b/project/src/main/res/layout/lx_base_layout.xml
@@ -14,9 +14,11 @@
         layout="@layout/lx_result_presenter"
         android:visibility="gone" />
 
-    <include
+    <com.expedia.bookings.presenter.lx.LXSearchParamsPresenter
         android:id="@+id/search_params_widget"
-        layout="@layout/widget_lx_search_params"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
         android:visibility="gone" />
 
     <com.expedia.bookings.presenter.lx.LXCheckoutPresenter
