--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -76,6 +76,11 @@
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
+    <style name="LXSearchToolbarTitleTextAppearance" parent="V2.Theme.LX">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/lx_actionbar_text_color</item>
+    </style>
+
     <style name="LXCardView" parent="V2.Theme.LX">
         <item name="android:background">#FFF</item>
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
