--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="launch_band">#36ffffff</color>
     <color name="launch_tile_overlay">#A6000000</color>
     <color name="low_memory_bg_color">#404040</color>
-    <color name="bg_air_attach_phone_launch">#1e2022</color>
+    <color name="bg_air_attach_phone_launch">#5E707D</color>
 
     <!-- New launch screen colors -->
     <color name="launch_mobile_exclusive">#980351</color>
