--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -21,7 +21,7 @@
             android:clipChildren="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:paddingBottom="@dimen/car_search_dropdown_padding"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:focusable="true"
@@ -34,7 +34,6 @@
                 style="@style/CarAutocomplete"
                 android:layout_width="0dp"
                 android:layout_height="43dp"
-                android:layout_marginBottom="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_weight="1"
                 android:completionThreshold="1"
@@ -49,7 +48,6 @@
                 style="@style/CarAutocomplete"
                 android:layout_width="0dp"
                 android:layout_height="43dp"
-                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
@@ -65,6 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:layout_below="@id/location_container"
+            android:layout_marginTop="@dimen/car_search_toggle_button_padding"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:background="@drawable/cars_button_background_selector"
