--- a/project/src/main/res/values-v21/styles_cars.xml
+++ b/project/src/main/res/values-v21/styles_cars.xml
@@ -4,11 +4,19 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <style name="V2.Theme.Cars" parent="AppTheme.Base">
+    </style>
+
     <style name="CarButton" parent="android:Widget.Material.Button">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
+    </style>
+    <style name="LaunchActionBarTabTextStyle" parent="@style/Widget.AppCompat.ActionBar.TabText">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:textColor">@drawable/tab_text_selector</item>
     </style>
 
 </resources>
