--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="V2.Theme.Cars" parent="@style/Theme.AppCompat.Light">
+    <style name="V2.Theme.Cars" parent="AppTheme.Base"/>
+
+    <style name="AppTheme.Base" parent="@style/Theme.AppCompat.Light">
         <item name="windowActionBar">false</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
@@ -73,12 +75,14 @@
     <style name="CarsToolbarTitleTextAppearance" parent="V2.Theme.Cars">
         <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
     <style name="CarsToolbarSubtitleTextAppearance" parent="V2.Theme.Cars">
         <item name="android:textSize">11sp</item>
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="CarButton" parent="android:Widget.Button" >
@@ -136,6 +140,11 @@
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textColor">#212121</item>
         <item name="android:textColorHint">#9A9A9A</item>
+    </style>
+
+    <style name="CarRobotoFont">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
 </resources>
