--- a/project/src/main/res/values/arrays.xml
+++ b/project/src/main/res/values/arrays.xml
@@ -848,4 +848,20 @@
         <item>2</item>
     </string-array>
 
+    <string-array name="abacus_search_influence_choices">
+        <item>@string/preference_abacus_setting_server</item>
+        <item>@string/preference_abacus_setting_controlgroup</item>
+        <item>Working Hard</item>
+        <item>Searching Hundreds</item>
+        <item>No text</item>
+    </string-array>
+
+    <string-array name="abacus_search_influence_values">
+        <item>-1</item>
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
 </resources>
