Fixing test failing because of Money in tickets.

--- a/project/src/main/res/layout/lx_checkout_presenter.xml
+++ b/project/src/main/res/layout/lx_checkout_presenter.xml
@@ -10,7 +10,8 @@
         android:id="@+id/confirmation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/lx_confirmation_background"/>
+        android:background="@color/lx_confirmation_background"
+        android:visibility="gone"/>
 
     <com.expedia.bookings.widget.CVVEntryWidget
         android:id="@+id/cvv"
